@@ -48,7 +48,6 @@ config.status:
 	# Add here commands to configure the package.
 	CPPFLAGS="$(CPPFLAGS)" CFLAGS="$(CFLAGS)" ./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info
 
-
 build: build-stamp
 
 build-stamp:  config.status
